--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap');
+HTML, body {
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
+}
+
 :root {
     --background-color: #272D2D;
+    --black: #1F1F1F;
+    --white: #FDF8EC;
+    --gray: #424D4D;
+
+}
+.text {
+    font-family: 'Josefin Sans';
+    color: var(--white);
 }
