--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;700&display=swap');
 HTML, body {
     margin: 0px;
     padding: 0px;
@@ -9,10 +9,23 @@ HTML, body {
     --background-color: #272D2D;
     --black: #1F1F1F;
     --white: #FDF8EC;
-    --gray: #424D4D;
+    --gray: #424D4D;    
+    --dark-gray: #2F3737;
+    --highlight: #64A6BD;
 
 }
 .text {
     font-family: 'Josefin Sans';
     color: var(--white);
+    font-weight: 400;
+    font-size: 16px;
+}
+.text.small {
+    font-size: 14px;
+    font-weight: 400;
+}
+.link {
+    font-family: 'Josefin Sans';
+    color: var(--highlight);
+    font-size: 14px;
 }
