--- a/styles/sidebar.module.css
+++ b/styles/sidebar.module.css
@@ -15,11 +15,20 @@
     margin: 5px;
     margin-left: -5px;
 }
+.categoryContent {
+    margin-left: -5px;
+
+}
 .filterItem {
     display: flex;
     background-color: var(--highlight);
-    padding: 10px;
+    padding: 7px;
     border-radius: 5px;
     margin: 5px;
+    align-items: center;
+}
+.categoryItem {
+    display: flex;
+    margin: 2px;
     align-items: center;
 }
