--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -42,4 +42,8 @@
   font-family: 'Josefin Sans';
   font-size: 16px;
   font-weight: 500;
+  margin: 5px;
+}
+.buttonContainer {
+  display: flex;
 }
