--- a/styles/result.module.css
+++ b/styles/result.module.css
@@ -78,3 +78,11 @@
   padding-left: 20px;
   margin: 0;
 }
+.time {
+  display: flex;
+  padding-right: 10px;
+  justify-content: space-evenly;
+}
+.rating {
+  padding-left: 10px;
+}
